<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Foursquare">Foursquare</string>
    <string name="GoIn">Go in</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="accident">Accident</string>
    <string name="accidents">Accidents</string>
    <string name="addFavorite">Add favorite</string>
    <string name="addToFavoritesButton">Add</string>
    <string name="advanced">Advanced</string>
    <string name="always_play_sound_to_phone_speaker">Always play sound to phone speaker</string>
    <string name="animals">Animals</string>
    <string name="app_name">Waze</string>
    <string name="approve">Approve</string>
    <string name="around_me">Around me</string>
    <string name="autoLearnRoutes">Auto-learn routes to frequent destination</string>
    <string name="autoZoom">Auto zoom</string>
    <string name="automatic_night_mode">Automatic night mode</string>
    <string name="avoidHighways">Avoid highways</string>
    <string name="avoidToll">Avoid toll roads</string>
    <string name="babyMood">wazer_baby</string>
    <string name="babyMoodCaption">Waze newbie</string>
    <string name="bt_points">points!</string>
    <string name="by">by</string>
    <string name="camera">Camera</string>
    <string name="cameraReportText1">Wazers are notified of speed cams only when approaching at an excessive speed.</string>
    <string name="cameraReportText2">Note: New speed cams need to be validated by community map editors. You can do it too at www.waze.com/livemap</string>
    <string name="carStopped">Car stopped</string>
    <string name="carselect_title">Select your car</string>
    <string name="checkIn">Check in</string>
    <string name="chitChat">Chit chat</string>
    <string name="chitChats">Chit chats</string>
    <string name="click_pave">Click \'Pave\' and simply drive. Remember to hit \'Stop\' when done.</string>
    <string name="click_pave_stop">Click \'Stop\' and make sure to go to www.waze.com/livemap to name this new road and publish it.</string>
    <string name="close">Close</string>
    <string name="commuteMsg1">Waze is best used for commuting.</string>
    <string name="commuteMsg2">Once you add \'Home\' and \'Work\' to your favorites, Waze\'ll learn your preferred routes and departure times to these destinations.</string>
    <string name="commuteMsg3">Enter the address and select the correct result.</string>
    <string name="completeStandstill">Complete standstill</string>
    <string name="construction">Construction</string>
    <string name="dataTransfer">Data transfer</string>
    <string name="data_used">Data used in current session</string>
    <string name="datatrafnsfer1">* Changes won\'t affect routing. Your route is always calculated based on real-time traffic conditions.</string>
    <string name="datatrafnsfer2">* Traffic and updates will not be seen on the map if you disable their download.</string>
    <string name="day">Day</string>
    <string name="decline">Decline</string>
    <string name="describeMapIssue">Describe map issue here ...</string>
    <string name="dirtRoads">Dirt roads</string>
    <string name="display">Display</string>
    <string name="displayMapControls">Display map controls on tap</string>
    <string name="done">Done</string>
    <string name="downalod_traffic_info">Download traffic info</string>
    <string name="events_radius">Events radius</string>
    <string name="facebook">Facebook</string>
    <string name="facebookLikeButton">Like Waze</string>
    <string name="facebookLikeText1">\'Like\' us to keep up with news, promotions with cool prizes and lots more...</string>
    <string name="facebookLikeText2">\'Like\' us to keepup on news from the blog, promotions with cool prizes, and lots more...</string>
    <string name="facebookLikeTitle">How about a little Facebook love?</string>
    <string name="facebookShareButton">Share on Facebook</string>
    <string name="facebookShareText1">It only takes a handful of Wazers driving in your area to significantly improve the real-time traffic &amp; road info you need for a better commute.</string>
    <string name="facebookShareText2">So tell your friends and help build the Waze driving community in your \'hood\'!</string>
    <string name="facebookShareTitle">Share with friends &amp; colleagues!</string>
    <string name="facebookdetails">Show Facebook details:</string>
    <string name="fake">Fake</string>
    <string name="favorites">Favorites</string>
    <string name="fog">Fog</string>
    <string name="foursquare_details">Full details on this check-in are available for you on foursquare.com.</string>
    <string name="foursquare_points">Points:</string>
    <string name="fp_title">Forgot password</string>
    <string name="general">General</string>
    <string name="widget_nodata_info1">Know exactly how long your commute will be between work and home, at any given moment! In order for the widget to work, you must have your \'Home\' and \'Work\' addresses saved in your Waze Favorites list.</string>
    <string name="widget_nodata_info2">To do so, click \'Navigate\' and search for your home/work address. Choose the correct address, select \'Add\' and name the address either \'Home\' or \'Work\'.</string>
    <string name="widget_nodata_title">Commute with Waze</string>
    <string name="widget_no_data_accept">Open Waze</string>
    <string name="widget_no_data_close">Close</string>
</resources>