<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/app_widget_nodata_root" android:background="@drawable/widget_bg_info1" android:paddingTop="30dp" android:paddingBottom="30dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="22sp" android:textColor="@color/solid_white" android:id="@+id/text_title" android:paddingLeft="10dp" android:paddingBottom="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_nodata_title" />
    <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/widget_error" android:paddingTop="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/widget_error" />
            <TextView android:textSize="15sp" android:textColor="@color/solid_black" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/text_info1" android:paddingLeft="18dp" android:paddingRight="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/widget_nodata_info1" />
            <TextView android:textSize="15sp" android:textColor="@color/solid_black" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/text_info2" android:paddingLeft="18dp" android:paddingRight="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/widget_nodata_info2" />
            <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:id="@+id/layout_buttons" android:paddingTop="20dp" android:layout_width="match_parent" android:layout_height="wrap_content"
                <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:id="@+id/btn_enter" android:background="@drawable/button_blue" android:paddingLeft="5dp" android:paddingRight="5dp" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x8201" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:textColor="#000000" android:id="@+id/text_btn_enter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_no_data_accept" />
                </LinearLayout>
                <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:id="@+id/btn_close" android:background="@drawable/button_blue" android:paddingLeft="5dp" android:paddingRight="5dp" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x8201" android:layout_height="wrap_content">
                    <TextView android:textStyle="bold" android:textColor="#000000" android:id="@+id/text_btn_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_no_data_close" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
